--- a/galery.css
+++ b/galery.css
@@ -129,7 +129,9 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0 auto;
     width: 1440px;
-    height: auto;
+    background: url("images/background.png");
+    background-repeat: repeat;
+    background-size: 200px;
 }
 
 header {
@@ -200,9 +202,14 @@ header {
 .header_list li {
     list-style: none;
     margin: 17px;
+    border-bottom: 1px solid rgb(44, 12, 0);
 }
 
 .header_burger {
+    display: none;
+}
+
+.header-book {
     display: none;
 }
 
@@ -210,10 +217,16 @@ header {
     .header_burger {
         display: flex;
         position: relative;
-        width: 30px;
-        height: 20px;
+        width: 50px;
+        height: 30px;
         z-index: 3;
-        margin-right: 10px;
+        margin-right: 20px;
+    }
+
+    .header-book {
+        font-size: 30px;
+        z-index: 20;
+        display: block;
     }
 
     body.lock {
@@ -223,8 +236,8 @@ header {
     .logo2 {
         display: block;
         z-index: 100;
-        max-height: 70px;
-        max-width: 70px;
+        max-height: 100px;
+        max-width: 100px;
         position: relative;
         justify-content: left;
         margin-left: 10px;
@@ -250,7 +263,7 @@ header {
         left: 0;
         background-color: rgb(0, 0, 0);
         height: 2px;
-        top: 9px;
+        top: 14.5px;
     }
 
     .header_burger:before {
@@ -263,7 +276,7 @@ header {
 
     .header_body {
         justify-content: space-between;
-        height: 70px;
+        height: 100px;
     }
 
     .header_menu.active {
@@ -273,7 +286,7 @@ header {
         width: 100%;
         height: auto;
         background-color: #dddddd;
-        padding: 70px 0px 0px 0px;
+        padding: 100px 0px 0px 0px;
     }
 
     .header_menu {
