--- a/test.css
+++ b/test.css
@@ -4,6 +4,9 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0 auto;
     width: 1440px;
+    background: url("images/background.png");
+    background-repeat: repeat;
+    background-size: 200px;
 }
 
 header {
@@ -74,9 +77,14 @@ header {
 .header_list li {
     list-style: none;
     margin: 17px;
+    border-bottom: 1px solid rgb(44, 12, 0);
 }
 
 .header_burger {
+    display: none;
+}
+
+.header-book {
     display: none;
 }
 
@@ -84,10 +92,16 @@ header {
     .header_burger {
         display: flex;
         position: relative;
-        width: 30px;
-        height: 20px;
+        width: 50px;
+        height: 30px;
         z-index: 3;
-        margin-right: 10px;
+        margin-right: 20px;
+    }
+
+    .header-book {
+        font-size: 30px;
+        z-index: 20;
+        display: block;
     }
 
     body.lock {
@@ -97,8 +111,8 @@ header {
     .logo2 {
         display: block;
         z-index: 100;
-        max-height: 70px;
-        max-width: 70px;
+        max-height: 100px;
+        max-width: 100px;
         position: relative;
         justify-content: left;
         margin-left: 10px;
@@ -124,7 +138,7 @@ header {
         left: 0;
         background-color: rgb(0, 0, 0);
         height: 2px;
-        top: 9px;
+        top: 14.5px;
     }
 
     .header_burger:before {
@@ -137,7 +151,7 @@ header {
 
     .header_body {
         justify-content: space-between;
-        height: 70px;
+        height: 100px;
     }
 
     .header_menu.active {
@@ -147,7 +161,7 @@ header {
         width: 100%;
         height: auto;
         background-color: #dddddd;
-        padding: 70px 0px 0px 0px;
+        padding: 100px 0px 0px 0px;
     }
 
     .header_menu {
@@ -396,7 +410,7 @@ strong {
     }
 
     .list-item-inner img {
-        max-width: 500px;
+        min-width: 1000px;
         min-height: auto;
         display: block;
     }
@@ -409,11 +423,10 @@ strong {
     }
 
     .list-item {
-        margin-bottom: 10px;
-        margin-top: 20px;
-        position: relative;
-        margin-left: 100px;
-        margin-right: 100px;
+        display: inline-block;
+        text-align: center;
+        max-width: 1000px;
+        float: none;
     }
 
     .list-item figcaption {
@@ -725,4 +738,9 @@ strong {
         padding-left: 0;
         padding-right: 120px;
     }
+}
+
+.map {
+    text-align: center;
+    margin: 3em;
 }
